Some simple clean up in DetermineCommonAncestorTask
Signed-off-by: Matilda Clerke <matilda.clerke@consensys.net>